# shopper-intent-prediction

./: .gitignore  README.md  pyproject.toml
api/: main.py  schemas.py
configs/: training.yaml
docs/: 01_system_design.md  02_model_development.md  03_monitoring_strategy.md  04_API_Documentation.md  05_testing.md
models/: ann.keras  benchmark_metrics.csv  decision_tree.joblib  deployment.json  logistic_regression.joblib  model_metrics.csv  preprocessor.joblib  training_summary.md
notebooks/: exploration_&_developement.ipynb
reports/: monitoring_report.json
src/shopper_intent/: __init__.py  benchmark.py  evaluation.py  features.py  monitoring.py  predict.py  preprocessing.py  train.py
tests/: test_benchmark.py  test_features.py  test_monitoring.py  test_predict.py  test_preprocessing.py  test_selection.py
