[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shopper-intent-prediction"
version = "0.1.0"
description = "Online shopper purchase-intent prediction"
requires-python = ">=3.10"
dependencies = [
  "imbalanced-learn>=0.12",
  "joblib>=1.3",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "scikit-learn>=1.4",
  "seaborn>=0.13",
  "tensorflow>=2.16",
  "tabulate>=0.9",
  "pydantic>=2.13.4",
  "fastapi>=0.139.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
